 <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_280sdp"
        android:orientation="vertical">

            <TextView
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="@dimen/_24sdp"
                android:fontFamily="@font/open_sans"
                android:textFontWeight="400"
                android:textStyle="bold"
                android:textColor="@color/theme_green"
                android:textSize="@dimen/_12ssp"
                android:text="@string/mute_notifications_for"/>

     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="@dimen/_240sdp">


        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:alpha=".2"
            android:layout_height="1dp"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/_24sdp"
                android:text="@string/forever"
                android:textColor="@color/tab_grey"
                android:fontFamily="@font/poppins"
                android:textFontWeight="400"
                android:paddingStart="@dimen/_12sdp"
                android:textSize="@dimen/_10ssp"
          />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:alpha=".2"
            android:layout_height="1dp"/>

     <RadioButton
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_marginStart="@dimen/_24sdp"
         android:text="@string/for_15_min"
         android:textColor="@color/tab_grey"
         android:fontFamily="@font/poppins"
         android:textFontWeight="400"
         android:paddingStart="@dimen/_12sdp"
         android:textSize="@dimen/_10ssp"
         />

     <com.google.android.material.divider.MaterialDivider
         android:layout_width="match_parent"
         android:alpha=".2"
         android:layout_height="1dp"/>

     <RadioButton
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_marginStart="@dimen/_24sdp"
         android:text="@string/for_30_min"
         android:textColor="@color/tab_grey"
         android:fontFamily="@font/poppins"
         android:textFontWeight="400"
         android:paddingStart="@dimen/_12sdp"
         android:textSize="@dimen/_10ssp"
         />

     <com.google.android.material.divider.MaterialDivider
         android:layout_width="match_parent"
         android:alpha=".2"
         android:layout_height="1dp"/>

     <RadioButton
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_marginStart="@dimen/_24sdp"
         android:text="@string/for_1_hour"
         android:textColor="@color/tab_grey"
         android:fontFamily="@font/poppins"
         android:textFontWeight="400"
         android:paddingStart="@dimen/_12sdp"
         android:textSize="@dimen/_10ssp"
         />

     <com.google.android.material.divider.MaterialDivider
         android:layout_width="match_parent"
         android:alpha=".2"
         android:layout_height="1dp"/>


     <RadioButton
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_marginStart="@dimen/_24sdp"
         android:text="@string/for_24_hour"
         android:textColor="@color/tab_grey"
         android:fontFamily="@font/poppins"
         android:textFontWeight="400"
         android:paddingStart="@dimen/_12sdp"
         android:textSize="@dimen/_10ssp"
         />

     <com.google.android.material.divider.MaterialDivider
         android:layout_width="match_parent"
         android:alpha=".2"
         android:layout_height="1dp"/>

     <RadioButton
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_marginStart="@dimen/_24sdp"
         android:text="@string/for_1_week"
         android:textColor="@color/tab_grey"
         android:fontFamily="@font/poppins"
         android:textFontWeight="400"
         android:paddingStart="@dimen/_12sdp"
         android:textSize="@dimen/_10ssp"
         />

     </RadioGroup>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:alpha=".2"
            android:layout_height="1dp"/>

    </LinearLayout>