<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_background">



    <RelativeLayout
        android:layout_weight=".3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        <ImageView
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content"
            android:alpha=".2"
            android:src="@drawable/background1"/>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="match_parent"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight=".15"
                android:layout_height="match_parent"/>
        <ImageView
            android:foregroundGravity="center"
            android:layout_width="0dp"
            android:layout_weight=".7"
            android:layout_height="match_parent"
            android:src="@drawable/gtf_logo"/>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight=".15"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_18ssp"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textColor="@color/theme_green"
            android:fontFamily="@font/poppins500"/>
        
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:id="@+id/username_container"
            android:layout_marginEnd="40dp"
            app:cardBackgroundColor="@color/authEditTextBg"
            app:strokeWidth=".3dp"
            app:strokeColor="@color/authCardStrokeColor"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="match_parent"
                    android:src="@drawable/msg"/>

            <EditText
                android:id="@+id/email_id"
                android:textSize="14sp"
                android:inputType="textEmailAddress"
                android:gravity="center_vertical"
                android:hint="john@gmail.com"
                android:fontFamily="@font/poppins"
                android:textColor="@color/authEditText"
                android:textColorHint="@color/authEditText"
                android:layout_marginStart="15dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:imeOptions="actionDone"
                android:includeFontPadding="false"
                android:background="@android:color/transparent"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:cardCornerRadius="12dp"
            app:cardBackgroundColor="@color/authEditTextBg"
            android:id="@+id/password_container"
            app:strokeWidth=".3dp"
            app:strokeColor="@color/authCardStrokeColor">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:padding="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_marginStart="@dimen/_6sdp"
                    android:layout_width="@dimen/_14sdp"
                    android:layout_height="match_parent"
                    android:src="@drawable/lock"/>

                <EditText
                    android:textSize="14sp"
                    android:hint="*****************"
                    android:inputType="textPassword"
                    android:id="@+id/password"
                    android:imeOptions="actionDone"
                    android:textColor="@color/authEditText"
                    android:textColorHint="@color/authEditText"
                    android:fontFamily="@font/poppins"
                    android:layout_marginStart="15dp"
                    android:gravity="center_vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:maxLines="1"
                    android:includeFontPadding="false"
                    android:background="@android:color/transparent"/>

                <ImageView
                    android:id="@+id/password_toggle_switch"
                    android:layout_marginEnd="@dimen/_6sdp"
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="match_parent"
                    android:src="@drawable/visible"/>

            </LinearLayout>

                <RelativeLayout
                    android:id="@+id/error_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:orientation="vertical">

                    <com.google.android.material.divider.MaterialDivider
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="@dimen/_40sdp"
                        android:layout_marginEnd="@dimen/_60sdp"
                        android:alpha=".4"/>

                    <LinearLayout
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                    <ImageView
                        android:padding="@dimen/_2sdp"
                        android:layout_width="@dimen/_14sdp"
                        android:layout_height="match_parent"
                        android:src="@drawable/error"/>

                    <TextView
                        android:layout_marginStart="@dimen/_6sdp"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textColor="@color/authErrorText"
                        android:text="Oops! Wrong Password"
                        android:fontFamily="@font/poppins"
                        android:textSize="@dimen/_9ssp"
                        android:gravity="center"/>

                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_height="wrap_content">

            <TextView
                android:fontFamily="@font/poppins"
                android:id="@+id/resend_otp"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:textSize="@dimen/_9ssp"
                android:textColor="@color/authTextView"
                android:layout_marginTop="10dp"
                android:text="@string/resend_otp"/>

            <TextView
                android:id="@+id/forget_password"
                android:fontFamily="@font/poppins"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:textSize="@dimen/_9ssp"
                android:layout_height="wrap_content"
                android:textColor="@color/authTextView"
                android:layout_marginTop="10dp"
                android:text="@string/forget_password"/>
        </RelativeLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:cardBackgroundColor="@color/theme_green"
            app:cardCornerRadius="12dp">

            <TextView
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins500"
                android:text="@string/login"
                android:includeFontPadding="false"/>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.divider.MaterialDivider
            android:layout_margin="20dp"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>


        <TextView
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:fontFamily="@font/poppins"
            android:textColor="@color/authTextView"
            />

        <com.google.android.material.card.MaterialCardView
            app:cardElevation="0dp"
            android:id="@+id/register_now"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:cardBackgroundColor="@color/authEditTextBg"
            app:strokeWidth=".3dp"
            app:strokeColor="@color/authCardStrokeColor"
            app:cardCornerRadius="12dp">

            <TextView
                android:textColor="@color/theme_green"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins500"
                android:includeFontPadding="false"
                android:text="@string/register_now"/>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:text="@string/read_terms_conditions_and_privacy_policy"
            />

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>