<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_background">

    <RelativeLayout
        android:layout_weight=".3"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/back"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:layout_width="@dimen/_18sdp"
            android:layout_height="@dimen/_18sdp"
            android:src="@drawable/back"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_marginBottom="@dimen/_20sdp"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="wrap_content"
                android:alpha=".2"
                android:src="@drawable/background1"/>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:layout_height="match_parent"/>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">
            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight=".15"
                android:layout_height="match_parent"/>
            <ImageView
                android:foregroundGravity="center"
                android:layout_width="0dp"
                android:layout_weight=".7"
                android:layout_height="match_parent"
                android:src="@drawable/gtf_logo"/>
            <FrameLayout
                android:layout_width="0dp"
                android:layout_weight=".15"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight=".1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:layout_gravity="center"
            android:text="Register"

            android:textColor="@color/theme_green"
            android:fontFamily="@font/poppins500"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:cardCornerRadius="8dp"
            app:strokeWidth=".3dp"
            app:cardBackgroundColor="@color/authEditTextBg"
            app:strokeColor="@color/authCardStrokeColor">

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_13sdp"
                    android:layout_height="match_parent"
                    android:src="@drawable/gst"/>

                <EditText
                    android:id="@+id/gst_number"
                    android:ellipsize="end"
                    android:ems="1"
                    android:textSize="14sp"
                    android:hint="@string/gst_number"
                    android:textColorHint="@color/authEditText"
                    android:textColor="@color/authEditText"
                    android:fontFamily="@font/poppins"
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:includeFontPadding="false"
                    android:background="@android:color/transparent"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:cardCornerRadius="8dp"
            app:strokeWidth=".3dp"
            app:cardBackgroundColor="@color/authEditTextBg"
            app:strokeColor="@color/authCardStrokeColor">

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_13sdp"
                    android:layout_height="match_parent"
                    android:src="@drawable/message"/>

                <EditText
                    android:id="@+id/company_name"
                    android:ems="1"
                    android:inputType="text"
                    android:textSize="14sp"
                    android:hint="@string/billing_name"
                    android:textColorHint="@color/authEditText"
                    android:textColor="@color/authEditText"
                    android:fontFamily="@font/poppins"
                    android:layout_marginStart="15dp"
                    android:ellipsize="end"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:includeFontPadding="false"
                    android:background="@android:color/transparent"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:cardCornerRadius="8dp"
            app:strokeWidth=".3dp"
            app:cardBackgroundColor="@color/authEditTextBg"
            app:strokeColor="@color/authCardStrokeColor">

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_13sdp"
                    android:layout_height="match_parent"
                    android:src="@drawable/warning"/>

                <EditText
                    android:id="@+id/additional_info"
                    android:ellipsize="end"
                    android:ems="1"
                    android:inputType="text"
                    android:textSize="14sp"
                    android:hint="@string/additional_info"
                    android:fontFamily="@font/poppins"
                    android:layout_marginStart="15dp"
                    android:textColorHint="@color/authEditText"
                    android:textColor="@color/authEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:includeFontPadding="false"
                    android:background="@android:color/transparent"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:cardCornerRadius="8dp"
            app:strokeWidth=".3dp"
            app:cardBackgroundColor="@color/authEditTextBg"
            app:strokeColor="@color/authCardStrokeColor">

            <LinearLayout
                android:id="@+id/how_did_find_us_button"
                android:layout_gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_13sdp"
                    android:layout_height="match_parent"
                    android:src="@drawable/money"/>

                <TextView
                    android:id="@+id/how_did_find_us"
                    android:textSize="14sp"
                    android:hint="How Did You Find us?*"
                    android:fontFamily="@font/poppins"
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:textColorHint="@color/authEditText"
                    android:textColor="@color/authEditText"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:includeFontPadding="false"
                    android:background="@android:color/transparent"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/navigate_next"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:cardBackgroundColor="@color/theme_green"
            app:cardCornerRadius="8dp">

            <TextView
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/poppins500"
                android:text="NEXT"
                android:includeFontPadding="false"/>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</LinearLayout>